--- a/index.html
+++ b/index.html
@@ -5,11 +5,51 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Decideitor</title>
   <style>
-    body { font-size: 2em; text-align: center; margin-top: 2em; }
-    #nOpt, #opts input { width: 100%; border: 1px solid transparent; border-bottom: 1px solid #333; font-size: 1.5em; margin: .5em 0; text-align: center; }
-    #opts input:focus { border-bottom-width: 5px; outline: none !important; }
-    #btn-decide { width: 100%; border: 1px solid transparent; color: white; font-size: 1.5em; padding: 0.3em; background-color: teal; }
-    #btn-decide:focus { background-color: teal; color: white; }
+    body {
+      font-size: 2em;
+      text-align: center;
+      margin-top: 2em;
+      font-family: sans-serif;
+      background-color: #EEE;
+    }
+    #nOpt, #opts input {
+      background-color: rgba(0, 0, 0, .1);
+      box-sizing: border-box;
+      width: 100%;
+      border: 1px solid transparent;
+      border-bottom: 1px solid #333;
+      font-size: 1em;
+      margin: .5em 0;
+      text-align: center;
+    }
+    #nOpt {
+      width: 25%;
+      display: block;
+      margin: .5em auto;
+    }
+    #opts .chosen input {
+      background-color: yellowgreen;
+      color: #333;
+      font-weight: bold;
+    }
+    #opts label {
+      display: block;
+      text-align: left;
+    }
+    #opts input:focus { border-bottom-width: 5px;
+      outline: none !important;
+    }
+    #btn-decide {
+      margin-top: .5em;
+      width: 100%;
+      border: 1px solid transparent;
+      color: white;
+      font-size: 1em;
+      padding: 0.3em;
+      background-color: #333;
+    }
+      color: white;
+    }
   </style>
 </head>
 <body>
@@ -19,7 +59,8 @@
 </body>
 <script>
   let nOpts = 0
-  window.addEventListener('load', function(){
+  let nTries = 0
+  window.addEventListener('load', () => {
     const _nOptInput = document.querySelector('#nOpt')
     const _optsContainer = document.querySelector('#opts')
 
@@ -43,10 +84,12 @@
     const genInputOptions = () => {
       for(let i = 1; i <= nOpts; i++){
         const input = document.createElement('input')
+        input.addEventListener('keyup', () => nTries = 0)
         const label = document.createElement('label')
         label.innerHTML = `Opción ${i}:`
         const container = document.createElement('div')
-        container.appendChild(label).appendChild(input)
+        container.appendChild(label)
+        container.appendChild(input)
         _optsContainer.appendChild(container)
       }
       genDecideButton()
@@ -55,15 +98,19 @@
       const button = document.createElement('button')
       button.id = 'btn-decide'
       button.innerHTML = '¡Decide por mí!'
-      button.addEventListener('click', function(){
+      button.addEventListener('click', () => {
+        nTries++
         const d = decide()
         const chosen = _optsContainer.querySelector(`div:nth-child(${d})`)
-        alert(`Decidido: ${chosen.querySelector('input').value}`)
+        Array.prototype.slice.call(_optsContainer.querySelectorAll('div')).forEach(e => e.className = '')
+        chosen.className = 'chosen'
+        alert(`Intento ${nTries}\nDecidido: ${chosen.querySelector('input').value}`)
       })
       _optsContainer.appendChild(button)
     }
 
     _nOptInput.addEventListener('keyup', function(){
+      nTries = 0
       _optsContainer.innerHTML = ''
       if(this.value){
         nOpts = parseInt(this.value, 10)
